# diplom-code

./: db.sqlite3  docker-compose.yaml  init_migration.sql  test.py
api/: __init__.py  hypercorn_config.toml  pyproject.toml
api/configuration/: as_form.py  processors.py
api/configuration/security/: __init__.py
api/configuration/storage/: s3.py
api/internal/pkg/middlewares/: __init__.py  handle_http_exceptions.py  token_validation.py
api/internal/repos/mongodb/: __init__.py
api/internal/repos/postgres/: files.py  hashtags.py  notification.py  post_attachment.py  post_hashtags.py  post_rates.py  posts.py  ratings.py  region_attachments.py  regions.py  tourism_types.py  users.py
api/internal/repos/s3/: __init__.py
api/internal/routes/: admin.py  auth.py  hashtags.py  posts.py  regions.py  searches.py  tourism.py  user.py
api/internal/services/: admin_views.py  auth.py  comment.py  files.py  hashtag.py  notification.py  post.py  post_attachment.py  post_hashtag.py  post_main.py  rating.py  redis.py  region.py  region_attachment.py  region_main.py  search.py  tourism.py  tourism_main.py  user.py  user_main.py
api/pkg/connectors/: __init__.py  database.py  mongodb.py  rabbitmq.py  redis.py  s3.py
api/pkg/models/base/: enums.py  exception.py
api/pkg/models/containers/: __init__.py
api/pkg/models/exceptions/: __init__.py  jwt.py  posts.py  users.py
api/pkg/models/postgres/: __init__.py
api/pkg/models/pydantic/: __init__.py  body.py  responses.py
backend_configs/api_config/: .env  config.ini
backend_configs/bot_config/: .env  config.ini
docker/api/: Dockerfile
front/: next.config.mjs  package-lock.json  package.json  tailwind.config.js  utils.js
mailer/: config.ini  main.py  pyproject.toml
mailer/internal/: code_gen.py  main.py  redis_service.py  worker.py
mailer/pkg/connectors/: __init__.py
mailer/pkg/models/containers/: __init__.py
russia-front/: package-lock.json  package.json  tailwind.config.js
telegram_bot/: main.py  pyproject.toml
telegram_bot/internal/: commands.py
telegram_bot/pkg/connectors/: database.py
telegram_bot/pkg/models/containers/: __init__.py
telegram_bot/pkg/models/postgres/: __init__.py
(+41 files in other folders)
