[tool.poetry]
name = "mailer"
version = "0.1.0"
description = ""
authors = ["Saranthyr <kirillmaksimets@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
aio-pika = "^9.4.1"
dependency-injector = "^4.41"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
